Fix prefsAside horizontal scrollbar from last pull

--- a/less/about/preferences.less
+++ b/less/about/preferences.less
@@ -54,7 +54,6 @@ strong, div, span, li, em, p, a {
   z-index: 600;
   width: @sideBarWidth;
   height: 100%;
-  overflow-y: auto;
 
   > div {
     display: block;
